--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
     <script src="rps.js"></script>
-    </head>
 
+    <style>
+      button {
+        padding:25px;
+        font-family: 'Courier New', Courier, monospace;
+        background-color: seagreen;
+        border:2px solid blueviolet;
+        margin:5px;
+        color:violet;
+      }
+
+    </style>
+    </head>
+<body>
+     <button>Rock</button>
+     <button>Paper</button>
+     <button>Scissors</button>
+</body>
 </html>
