Completed game function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
-    <script src="rps.js"></script>
+    <script src="rps.js" defer></script>
 
     <style>
       button {
@@ -15,11 +15,24 @@
         color:violet;
       }
 
+      
     </style>
     </head>
 <body>
      <button>Rock</button>
      <button>Paper</button>
      <button>Scissors</button>
+     <div style = 'font-family: 'Courier New', Courier, monospace;'></div>
+     <div class = 'round'></div>
+     <div class = 'score'></div>
+     <div class = 'player'>Player :</div>
+     <div class = 'computer'>Computer: </div>
+     <div></div>
 </body>
 </html>
+
+<!-- round 1
+player: 0
+computer: 1
+
+you win! -->
